--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,6 +53,10 @@
   <body style>
     <a href="https://github.com/kevincon/utilityknife"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div class="container">
+      <div class="alert alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Warning!</strong> We're investigating an issue where this app fails with an Internal Server Error for users with Dropbox accounts larger than 10 GB (ironic, right?).
+      </div>
       <div class="page-header">
         <a href="/"><img src="static/images/logo.png" alt="Utility Knife"></a>
       </div>
