Made all js dependencies static.

--- a/templates/display.html
+++ b/templates/display.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="static/js/d3.v2.js"></script>
+<script src="/static/js/d3.min.js"></script>
 <script>
 var margin = {top: 30, right: 0, bottom: 0, left: 0},
     width = $("#chart").width(),
