--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,6 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
     <style>
       #chart {
         width: 960px;
@@ -64,15 +63,12 @@
     </div>
     <hr>
     <footer align="center">
-
       <p>Built in under 40 hours by <a href="http://www.kevintechnology.com">Kevin Conley</a> and <a href="http://www.linkedin.com/pub/carolynn-sullivan/7b/917/280/">Carolynn Sullivan</a> at the <a href="http://2013f.pennapps.com/">Penn Apps Fall 2013 hackathon</a>. Special thanks to Evan Benshetler and Greg Terrono.</p>
     </footer>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="//code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="static/js/tt.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/tt.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
