--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <h1>Visualize your Dropbox space.</h1>
         <br>
         <div class="col-md-8">
-            <img width="600" height="300" src="/static/images/demo.gif">
+            <img width="600" height="300" src="/static/images/demo.gif" style="max-width: 100%;">
         </div>
         <div class="col-md-4">
             <br>
